WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271043
The value attribute is not displayed in an input field with type="email" and multiple attributes
https://bugs.webkit.org/show_bug.cgi?id=271043
Summary
The value attribute is not displayed in an input field with type="email" and ...
shirakawa.hiroyuki
Reported
2024-03-15 01:30:09 PDT
Created
attachment 470379
[details]
screenshot The value of the value attribute is not displayed in an input field with type="email" and the multiple attribute. Changing the type attribute or removing the multiple attribute causes the value of the value attribute to be displayed. Please check the attached image. The reproducible HTML is as follows. <html> <body> <div> input type="email" value="
test1@example.com
" multiple<br> <input type="email" value="
test1@example.com
" multiple /> </div> <div> input type="text" value="
test2@example.com
" multiple<br> <input type="text" value="
test2@example.com
" multiple /> </div> <div> input type="email" value="
test3@example.com
"<br> <input type="email" value="
test3@example.com
" /> </div> </body> </html>
Attachments
screenshot
(42.85 KB, image/png)
2024-03-15 01:30 PDT
,
shirakawa.hiroyuki
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-22 01:31:21 PDT
<
rdar://problem/125221858
>
Aditya Keerthi
Comment 2
2024-03-30 17:22:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26657
EWS
Comment 3
2024-04-01 13:01:25 PDT
Committed
276895@main
(b52f2b8abac2): <
https://commits.webkit.org/276895@main
> Reviewed commits have been landed. Closing PR #26657 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug